fix header gap

--- a/main.css
+++ b/main.css
@@ -122,7 +122,7 @@ h3 {
 }
 
 .header {
-    background-color: #ccc;
+    background-color: black;
     overflow: hidden
 }
 
@@ -183,7 +183,7 @@ input + label {
 button {
     font-size: 1em;
     font-family: lobster;
-    padding: .25em 1em;
+    padding:inherit;
     border: 1px solid #000;
     background-color: black;
     color: white;
@@ -203,7 +203,7 @@ button:hover {
 }
   
 button:active {
-    border-color: organge;
+    border-color: blue;
 }
 
 .field{
